--- a/DotVVM.AMP/DotVVM.AMP.csproj
+++ b/DotVVM.AMP/DotVVM.AMP.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net472;net8.0</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <Version>0.2</Version>
     <Authors>Michal Tichý</Authors>
@@ -20,10 +20,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="3.1.0" />
+    <PackageReference Include="DotVVM" Version="4.3.9" />
     <PackageReference Include="ExCSS" Version="4.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.11" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.1" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.22" />
   </ItemGroup>
 
   <ItemGroup>
